# CathodeAutopsy

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: application.hpp  camera.hpp  color.hpp  geometry.hpp  grid.hpp  input_manager.hpp  mesh.hpp  paths.hpp  renderer.hpp  shader.hpp  text_renderer.hpp  texture.hpp  window.hpp
include/glad/: glad.h
include/tinyfiledialogs/: tinyfiledialogs.h
scripts/: plot.py
shaders/: basic.frag  basic.vert  text.frag  text.vert  textured.frag  textured.vert
src/: application.cpp  camera.cpp  grid.cpp  grid.hpp  input_manager.cpp  main.cpp  mesh.cpp  paths.cpp  plot.py  renderer.cpp  shader.cpp  text_renderer.cpp  texture.cpp  window.cpp
src/glad/: glad.c
src/tinyfiledialogs/: tinyfiledialogs.c
